--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,8 +1,6 @@
 {% if site.disqus.shortname %}
   <div id="disqus_thread">
-    <button class="disqus-load" onClick="loadDisqusComments()">
-      Load Comments
-    </button>
+  
   </div>
   <script>
 
@@ -25,8 +23,7 @@
   }
   </script>
   <noscript>
-    Please enable JavaScript to view the
-    <a href="https://disqus.com/?ref_noscript">comments powered by Disqus</a>.
+    Lütfen görüntülemek için JavaScript'i etkinleştirin.
   </noscript>
 
 {% elsif jekyll.environment != "production" %}
