--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -1,22 +1,22 @@
 <nav id="sidebar-icon-links">
+<a id="facebook-link"
+     class="icon" title="Facebook'" aria-label="Facebook"
+     href="https://www.facebook.com/onurryarar" target="_blank">
+    {% include svg/facebook.svg %}
+	<a id="email-link"
+     class="icon" title="E-posta" aria-label="E-posta"
+     href="mailto:onurr.yarar@hotmail.com">
+    {% include svg/email.svg %}
+  </a>
   {% if site.github.repo %}
     <a id="github-link"
-       class="icon" title="Github Project" aria-label="Github Project"
-       href="{{ site.github.repo }}">
+       class="icon" title="Github" aria-label="Github"
+       href="{{ site.github.repo }}" target="_blank">
       {% include svg/github.svg %}
     </a>
-    <a id="github-download-link"
-       class="icon" title="Download" aria-label="Download"
-       href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">
-      {% include svg/download.svg %}
-    </a>
   {% endif %}
-
-  <a id="subscribe-link"
-     class="icon" title="Subscribe" aria-label="Subscribe"
-     href="{{ site.baseurl }}/feed.xml">
-    {% include svg/feed.svg %}
-  </a>
+  
+    
 
   {% comment %}
     Check if we have tag or search pages page active before linking to it.
@@ -33,8 +33,8 @@
 
   {% if tags_page %}
     <a id="tags-link"
-       class="icon{% if page.url == '/tags' %} active{% endif %}"
-       title="Tags" aria-label="Tags"
+       class="icon{% if page.url == '/etiketler' %} active{% endif %}"
+       title="Etiketler" aria-label="Etiketler"
        href="{{ site.baseurl }}{{ tags_page.url }}">
       {% include svg/tags.svg %}
     </a>
@@ -42,8 +42,8 @@
 
   {% if search_page %}
     <a id="search-link"
-       class="icon{% if page.url == '/search' %} active{% endif %}"
-       title="Search" aria-label="Search"
+       class="icon{% if page.url == '/arama' %} active{% endif %}"
+       title="Arama" aria-label="Arama"
        href="{{ site.baseurl }}{{ search_page.url }}">
       {% include svg/search.svg %}
     </a>
