--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -20,7 +20,7 @@ $root-line-height: 1.5 !default;
 $body-color: $gray-5 !default;
 $body-muted: $gray-4 !default;
 $body-bg: #fff !default;
-$link-color: $blue !default;
+$link-color: #e74c3c !default;
 $heading-color: $gray-6 !default;
 
 $border-color: $gray-2 !default;
@@ -46,5 +46,5 @@ $code-color: #bf616a !default;
 
 // Hyde theming
 $sidebar-bg-color: #202020 !default;
-$sidebar-sticky: true !default;
+$sidebar-sticky: false !default;
 $layout-reverse: false !default;
