--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -32,7 +32,7 @@ layout: default
       {% endcapture %}
 
       {% if content_words != excerpt_words %}
-        <a href="{{ site.baseurl }}{{ post.url }}">Devamı &hellip;</a>
+        <a href="{{ site.baseurl }}{{ post.url }}">Okumaya devam et&hellip;</a>
       {% endif %}
     {% endif %}
   </article>
